--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-router": "^1.14.6",
     "@tanstack/router-devtools": "^1.14.6",
     "framer-motion": "^11.0.3",
+    "jotai": "^2.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
